# path-tracer

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: path-tracer.yml  rust.yml
src/: cli.yaml  config.rs  main.rs  scene.rs
src/config/: mod.rs  profile.rs  resolution.rs
src/raytracer/: mod.rs
src/renderer/: debug_renderer.rs  hit.rs  material_sample.rs  mod.rs  tonemap.rs  utils.rs  viewer.rs
src/renderer/brdf/: cook_torrance.rs  mod.rs
src/renderer/tonemap/: mod.rs
src/scene/: camera.rs  gltf.rs  isf.rs  light.rs  mod.rs  model.rs
src/scene/internal/: camera.rs  light.rs  material.rs  mod.rs  model.rs  texture_bank.rs  triangle.rs  vertex.rs
src/scene/model/: material.rs  mod.rs  triangle.rs  vertex.rs
src/utils/: hit.rs  kdtree.rs  logger.rs  material.rs  mod.rs  ray.rs  vertex.rs
tests/moller_trumbore/: gen_tests.py  hit_tests.yml  miss_tests.yml
tests/scenes/: cube.glb  head.glb  reflection.glb
tests/scenes/alpha_transparency/: scene.isf
tests/scenes/cube/: scene.isf
tests/scenes/head/: scene.isf
tests/scenes/reflection/: scene.isf
tests/scenes/spheres/: scene.isf
tests/scenes/white_furnace/: scene.isf
tests/scenes/white_furnace_direct/: scene.isf
tests/scenes/white_furnace_indirect/: scene.isf
