[package]
name = "path-tracer"
version = "0.1.0"
authors = [
    "Florian Amsallem <florian.amsallem@epita.fr>",
    "Alexandre Lamure <alexandre.lamure@epita.fr>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
clap = { version = "4.1.1", features = ["derive", "env"] }
derivative = "2.2.0"
easy-gltf = "0.1.5"
image = "0.24.1"
kdtree-ray = "0.1.2"
once_cell = "1.10.0"
pbr = "1.0.4"
rand = "0.8.3"
rayon = "1.5.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.9.16"
serde_json = "1.0.79"
sfml = "0.16.0"
sha-1 = "0.10.1"
yaml-rust = "0.4"
