[package]
name = "path-tracer"
version = "0.1.0"
authors = [
    "Florian Amsallem <florian.amsallem@epita.fr>",
    "Alexandre Lamure <alexandre.lamure@epita.fr>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
clap = { version = "4.5.11", features = ["derive", "env"] }
derivative = "2.2.0"
easy-gltf = "1.1.2"
image = "0.25.2"
kdtree-ray = "1.2.0"
once_cell = "1.17.0"
pbr = "1.0.4"
rand = "0.8.5"
rayon = "1.6.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
serde_json = "1.0.121"
sfml = "0.20.0"
sha-1 = "0.10.1"
